@@ -8,12 +8,14 @@ You can redistribute it and/or modify it under GPL2.
 /*
 for error / warning messages
 */
-p.message {
-	text-align: center;
-	font-size: large;
+p.message, span.message {
 	background-color: #d00;
 	color: #fff;
 	padding: 8px;
+	font-size: large;
+}
+p.message {
+	text-align: center;
 }
 
 /*
